[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEditNome" type="LineEdit" parent="."]
margin_left = 68.0
margin_top = 6.0
margin_right = 215.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditIdade" type="LineEdit" parent="."]
margin_left = 313.0
margin_top = 10.0
margin_right = 442.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelNOME" type="Label" parent="."]
margin_left = 11.0
margin_top = 9.0
margin_right = 54.0
margin_bottom = 23.0
text = "Nome:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIDADE" type="Label" parent="."]
margin_left = 252.0
margin_top = 14.0
margin_right = 292.0
margin_bottom = 28.0
text = "Idade:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTOTAL" type="Label" parent="."]
margin_left = 262.0
margin_top = 56.0
margin_right = 368.0
margin_bottom = 87.0
text = "Soma de Idades:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTotalGeral" type="Label" parent="."]
margin_left = 393.0
margin_top = 58.0
margin_right = 433.0
margin_bottom = 72.0
text = "0"

[node name="RichTextLabelLIsta" type="RichTextLabel" parent="."]
margin_left = 27.0
margin_top = 94.0
margin_right = 373.0
margin_bottom = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAdiciona" type="Button" parent="."]
margin_left = 27.0
margin_top = 51.0
margin_right = 128.0
margin_bottom = 71.0
text = "Adiciona Lista"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTotal" type="Button" parent="."]
margin_left = 176.0
margin_top = 51.0
margin_right = 229.0
margin_bottom = 71.0
text = "TOTAL"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonAdiciona" to="." method="_on_ButtonAdiciona_pressed"]
[connection signal="pressed" from="ButtonTotal" to="." method="_on_ButtonTotal_pressed"]
